<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_saved"
        android:title="@string/saved"
        app:actionLayout="@layout/action_saved"
        app:showAsAction="always"/>

    <item android:id="@+id/action_refresh"
          android:icon="@drawable/ic_refresh_white_24dp"
          android:title="@string/refresh"
          app:showAsAction="always"/>
</menu>