...
        android:minWidth="100dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/backdrop_image"
        android:layout_marginTop="120dp"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_anchorGravity="bottom|right|end"
        app:layout_constraintTop_toBottomOf="@+id/backdrop_image"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
...
